Fixed z-index.

--- a/styles/main.less
+++ b/styles/main.less
@@ -77,7 +77,7 @@
     border: 1px solid #bbb;
     background: #eee;
     background: linear-gradient(to bottom, #fff 0%, #e5e5e5 100px, #e5e5e5 100%);
-    z-index: 100;
+    z-index: 4;
     border-radius: 3px;
     box-shadow: 1px 1px 4px rgba(0,0,0,.2);
     opacity: 0;
@@ -153,7 +153,7 @@ a.menu-btn {
     height: 200px;
     position: absolute;
     background: blue;
-    z-index: 2;
+    z-index: 5;
     left: 22.5%;
     top: 22%;
     border-radius: 0.5em;
